[gd_scene load_steps=8 format=3 uid="uid://3va5fhmx5hn4"]

[ext_resource type="Script" path="res://Scripts/BubbleCutscene.gd" id="1_mow2u"]
[ext_resource type="Texture2D" uid="uid://u54l1x8wb25f" path="res://Assets/Map/map_Tutorial_1.png" id="6_rr6g4"]
[ext_resource type="PackedScene" uid="uid://bkjd5mneny7c1" path="res://Scenes/PlayerDog.tscn" id="7_ah2kl"]
[ext_resource type="PackedScene" uid="uid://beaa80kph8rv6" path="res://Scenes/ThoughtBubble_1.tscn" id="8_fts1w"]
[ext_resource type="PackedScene" uid="uid://og63l6ftex25" path="res://Scenes/ThoughtBubble_2.tscn" id="9_aaxy1"]
[ext_resource type="PackedScene" uid="uid://bighcj0mfvk1w" path="res://Scenes/ThoughtBubble_3.tscn" id="10_tokl4"]
[ext_resource type="PackedScene" uid="uid://cgndgpv6ds1ja" path="res://Scenes/ThoughtBubble_SadFace.tscn" id="11_ycko0"]

[node name="BubbleCutscene" type="Node2D"]
script = ExtResource("1_mow2u")

[node name="BubbleCamera" type="Camera2D" parent="."]
position = Vector2(-192, 0)
zoom = Vector2(1.1, 1.1)
limit_left = -953
limit_top = -535
limit_right = 953
limit_bottom = 535
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 10.0

[node name="MapTutorial1" type="Sprite2D" parent="."]
z_index = -3
texture = ExtResource("6_rr6g4")

[node name="BubbleDog" parent="." instance=ExtResource("7_ah2kl")]
position = Vector2(-345, 108)

[node name="ThoughtBubble_1" parent="." instance=ExtResource("8_fts1w")]
position = Vector2(-152, -54)
scale = Vector2(0.718021, 0.718021)

[node name="ThoughtBubble_2" parent="." instance=ExtResource("9_aaxy1")]
position = Vector2(-161, -106)
scale = Vector2(0.667512, 0.667512)

[node name="ThoughtBubble_3" parent="." instance=ExtResource("10_tokl4")]
position = Vector2(-153, -147)
scale = Vector2(0.636438, 0.636438)

[node name="ThoughtBubble_Sad" parent="." instance=ExtResource("11_ycko0")]
position = Vector2(-132, -169)
